--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -13,10 +13,10 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ Default, Pages ]
+    branches: [ 1.0 ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ Default, Pages ]
+    branches: [ Default, 1.0 ]
   schedule:
     - cron: '41 12 * * 2'
 
